-Countermeasures:
	-Fix flares and smoke CMs ejecting sideways.
-Weapons:
	-Removed the 'Engage Missile' toggle from APS/Dual-Purpose APS turrets as these weapons don't use it.
	-Fix custom ammo belts not cycling ammo type in some situations.
	-Missiles: 
		-Fix AAMLoft implementation for MMGs.
		-Fix reload gauge for reloadable launchers.
		-Add dynamic ordinance offset for reloadable rails so larger missiles no longer clip into rails/hardpoint mounts.
		-Fix lock-less Radar missiles doing a loop isntead of going straight.
		-Fix Reload Gauge on reloadable launchers.
		-Fix Account For Mass/Cost not applying to Missile magazines.
	-Radar slaving multiple turrets when turret multi-targeting > 1 now sees if a radar lock exists for each secondary target, instead of overriding multi-targeting and aiming all guns to the primary lock.
	-Fix Point Defense guns not firing on incoming missiles.

v1.9.0.0
IMPROVEMENTS / FIXES
- General:
	- Fix potential stack overflow in cfg parsing of bullets, rockets, materials and mutators that can cause KSP to not load if BDBNIC is also installed.
- UI:
	- Added lead target indicator to bombing reticule.
	- Bomb aimer reticule now dynamically sized based on bomb yield.
	- Reloading BDA settings now reloads the spawn locations.cfg.
	- Temporarily show the mouse cursor by holding right shift (customizable).
- AI:
	- Add target priority debug info to the telemetry and AI debugging.
	- Tweak take-off climb rates slightly for smoother take-off.
	- Surface AI now able to (mostly) navigate around buildings at the KSC/Island Airfield/etc.
	- Re-add look-ahead check to Missile Launch authorization, AI now again checks if the target is predicted to still be within boresight 2s later, should cut down on incidents of missiles firing at bad angles the moment a target enters FOV.